--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,14 +2,14 @@
   <div class="panel panel-default">
     <div class="panel-body">
 
-      <form action="/new_tweet" method="POST">
+      <form action="/send_snack" method="POST">
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" name="username" class="form-control" id="username" placeholder="username">
         </div>
         <div class="form-group">
-          <label for="msg">Message</label>
-          <textarea rows="5" type="text" name="msg" class="form-control" id="msg" placeholder="140 characters or less..."></textarea>
+          <label for="msg">Snack</label>
+          <textarea rows="5" type="text" name="snack" class="form-control" id="msg" placeholder="snack"></textarea>
         </div>
         <button type="submit" class="btn btn-default pull-right">Submit</button>
       </form>
