--- a/app/views/header.erb
+++ b/app/views/header.erb
@@ -1,9 +1,7 @@
-<div class="col-xs-12">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">Fwitter</a>
-      </div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Snackchat</a>
     </div>
-  </nav>
-</div>
+  </div>
+</nav>
