--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,32 +1,9 @@
-<div class="col-xs-12 col-md-6">
-  <div class="panel panel-default">
-    <div class="panel-body">
-
-      <form action="/send_snack" method="POST">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" name="username" class="form-control" id="username" placeholder="username">
-        </div>
-        <div class="form-group">
-          <label for="msg">Snack</label>
-          <textarea rows="5" type="text" name="snack" class="form-control" id="msg" placeholder="snack"></textarea>
-        </div>
-        <button type="submit" class="btn btn-default pull-right">Submit</button>
-      </form>
-
+<div class="list-group">
+  <% @all_snacks.each do |snack| %>
+    <div class="list-group-item">
+      <p class="list-group-item-text">
+        Snack from <%= snack.username %>
+      </p>
     </div>
-  </div>
-</div>
-
-
-<div class="col-xs-12 col-md-6">
-  <div class="list-group">
-    <% @all_tweets.each do |tweet| %>
-      <div class="list-group-item">
-        <p class="list-group-item-text">
-          @<%= tweet.username %> - <%= tweet.msg %>
-        </p>
-      </div>
-    <% end %>
-  </div>
+  <% end %>
 </div>
