--- a/app/views/header.erb
+++ b/app/views/header.erb
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Snackchat</a>
-    </div>
+<h1 class="text-primary text-center">Snackchat</h1>
+
+<div class="padding-bottom">
+  <div class="btn-group btn-group-justified">
+    <a href="/" class="btn btn-primary">Snacks</a>
+    <a href="send" class="btn btn-primary">Send</a>
   </div>
-</nav>
+</div>
