--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,9 +1,13 @@
 body, html{
   margin: 0;
   padding: 0;
-  background-color: #E8EAF6;
+  background-color: #FFEB3B;
 }
 
 body{
   padding-top: 50px;
+}
+
+.padding-bottom{
+  padding-bottom: 15px;
 }
