--- a/app/views/send.erb
+++ b/app/views/send.erb
@@ -14,7 +14,7 @@
         <label for="msg">Snack</label>
         <input type="text" name="snack" class="form-control" id="snack" placeholder="snack">
       </div>
-      <button type="submit" class="btn btn-default pull-right">Submit</button>
+      <button type="submit" class="btn btn-default btn-block">Submit</button>
     </form>
 
   </div>
