--- a/app/views/snack.erb
+++ b/app/views/snack.erb
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+  setTimeout(function(){
+    window.location.href = '/';
+  }, 10000);
+</script>
+
 <div class="panel panel-default">
   <div class="panel-body">
     <%= @snack.snack %>
