--- a/app/views/header.erb
+++ b/app/views/header.erb
@@ -3,6 +3,6 @@
 <div class="padding-bottom">
   <div class="btn-group btn-group-justified">
     <a href="/" class="btn btn-primary">Snacks</a>
-    <a href="/send" class="btn btn-primary">Send</a>
+    <a href="/send_snack" class="btn btn-primary">Send</a>
   </div>
 </div>
