updated login and signup routs and views

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
 
-    <form action="/sign_up" method="POST">
+    <form action="/login" method="POST">
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" name="username" class="form-control" id="username" placeholder="username">
@@ -10,7 +10,10 @@
         <label for="email">Email</label>
         <input type="email" name="email" class="form-control" id="email" placeholder="email">
       </div>
-      <button type="submit" class="btn btn-default pull-right">Submit</button>
+      <div class="pull-right">
+        <a href="/signup" class="btn btn-default">Create account</a>
+        <button type="submit" class="btn btn-default">Login</button>
+      </div>
     </form>
 
   </div>
