changed snackchat to SnackChat

--- a/app/views/header.erb
+++ b/app/views/header.erb
@@ -1,4 +1,4 @@
-<h1 class="text-primary text-center">Snackchat</h1>
+<h1 class="text-primary text-center">SnackChat</h1>
 
 <div class="padding-bottom">
   <div class="btn-group btn-group-justified">
