--- a/app/views/send_snack.erb
+++ b/app/views/send_snack.erb
@@ -17,5 +17,10 @@
       <button type="submit" class="btn btn-default btn-block">Submit</button>
     </form>
 
+    <form method="get" action="/login">
+      <button type="submit">Login or Sign Up</button>
+    </form>
+    
+    
   </div>
 </div>
