--- a/app/views/send_snack.erb
+++ b/app/views/send_snack.erb
@@ -3,12 +3,14 @@
 
     <form action="/send_snack" method="POST">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" id="username" placeholder="username">
-      </div>
-      <div class="form-group">
         <label for="receiver">Receiver</label>
-        <input type="text" name="receiver" class="form-control" id="receiver" placeholder="receiver">
+        <select name="receiver" class="form-control" id="receiver">
+          <% User.where.not({id: @user.id}).each do |user| %>
+            <option value="<%= user.id %>">
+              <%= user.username %>
+            </option>
+          <% end %>
+        </select>
       </div>
       <div class="form-group">
         <label for="msg">Snack</label>
@@ -16,11 +18,6 @@
       </div>
       <button type="submit" class="btn btn-default btn-block">Submit</button>
     </form>
-
-    <form method="get" action="/login">
-      <button type="submit">Login or Sign Up</button>
-    </form>
-    
     
   </div>
 </div>
