updated sweetalert for login and signup

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -5,11 +5,11 @@
       
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" id="username" placeholder="username">
+        <input type="text" name="username" class="form-control" id="username" placeholder="username" require>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="email">
+        <input type="email" name="email" class="form-control" id="email" placeholder="email" require>
       </div>
       <div class="pull-right">
         <a href="/signup" class="btn btn-default">Create account</a>
