--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,11 +7,14 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/bower/bootstrap-sweetalert/lib/sweet-alert.css">
   <link rel="stylesheet" href="/css/style.css">
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="/bower/bootstrap-sweetalert/lib/sweet-alert.min.js"></script> 
+  <script src="/js/main.js"></script>
 </head>
 <body>
   <div class="container-fluid">
