--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -4,11 +4,11 @@
     <form action="/signup" method="POST">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" id="username" placeholder="username">
+        <input type="text" name="username" class="form-control" id="username" placeholder="username" require>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="email">
+        <input type="email" name="email" class="form-control" id="email" placeholder="email" require>
       </div>
       <button type="submit" class="btn btn-default pull-right">Sign Up</button>
     </form>
