--- a/app/views/send_snack.erb
+++ b/app/views/send_snack.erb
@@ -16,6 +16,23 @@
         <label for="msg">Snack</label>
         <input type="text" name="snack" class="form-control" id="snack" placeholder="snack">
       </div>
+      
+      <div class="form-group">
+        <label for="msg">Time</label>
+        <select name="seconds" id="seconds">
+          <option value="1">1 second</option>
+          <option value="2">2 seconds</option>
+          <option value="3">3 seconds</option>
+          <option value="4">4 seconds</option>
+          <option value="5">5 seconds</option>
+          <option value="6">6 seconds</option>
+          <option value="7">7 seconds</option>
+          <option value="8">8 seconds</option>
+          <option value="9">9 seconds</option>
+          <option value="10">10 seconds</option>
+        </select>
+      </div>
+      
       <button type="submit" class="btn btn-default btn-block">Submit</button>
     </form>
     
