--- a/app/views/send_snack.erb
+++ b/app/views/send_snack.erb
@@ -14,12 +14,12 @@
       </div>
       <div class="form-group">
         <label for="msg">Snack</label>
-        <input type="text" name="snack" class="form-control" id="snack" placeholder="snack">
+        <input type="text" name="snack" class="form-control" id="snack" placeholder="snack" required>
       </div>
       
       <div class="form-group">
         <label for="msg">Time</label>
-        <select name="seconds" id="seconds">
+        <select name="seconds" id="seconds" required>
           <option value="1">1 second</option>
           <option value="2">2 seconds</option>
           <option value="3">3 seconds</option>
