--- a/app/views/header.erb
+++ b/app/views/header.erb
@@ -1,4 +1,8 @@
-<h1 class="text-primary text-center">SnackChat</h1>
+<div class="row">
+	<div class="col-xs-4 col-xs-offset-4">
+		<img class="img-responsive" src="/images/logo.png">
+	</div>
+</div>
 
 <div class="padding-bottom">
   <div class="btn-group btn-group-justified">
